# solio-autosolve

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  solver_settings.yaml  solver_settings.yaml.example
debug/: debug_settings.py
scripts/: run_scheduled.bat  run_scheduled.ps1  run_scheduled.sh  setup_scheduled.sh  setup_scheduled_task.ps1  solio-run
src/solio_autosolve/: __init__.py  browser.py  config.py  email_sender.py  explore_settings.py  gmail_api.py  login.py  main.py  parser.py  settings.py  solve.py
